Install geckodriver using ansible role (the firefox-geckodriver package has been removed in ubuntu 22.04).

--- a/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
@@ -64,6 +64,7 @@
   roles:
     - ssl
     - nginx
+    - tmiller02.geckodriver
     - { role: backend_app, tags: [update_backend_app] }
   vars_files:
     - vars/shared.yml
