--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
@@ -1,5 +1,9 @@
 ---
 {% raw %}
+- name: set backend_app_virtualenv_dir fact
+  set_fact:
+    backend_app_virtualenv_dir: "{{ backend_app_deploy_helper.new_release_path }}/venv"
+
 - name: install python packages and build dependencies
   become: true
   apt:
