--- a/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
@@ -1,12 +1,12 @@
 ---
 {% raw %}
-- name: install yarn packages
-  command: yarn install --frozen-lockfile
+- name: install npm packages
+  command: npm clean-install
   args:
     chdir: "{{ playbook_dir }}/../frontend_app/"
 
 - name: build the frontend app bundle
-  command: yarn run build
+  command: npm run build
   args:
     chdir: "{{ playbook_dir }}/../frontend_app/"
   environment:
@@ -15,8 +15,8 @@
 # Note that this doesn't fail the playbook if vulnerable packages are found.
 # This only displays the report in the ansible output so we don't cause any
 # deployment to fail unexpectedly.
-- name: run yarn npm audit
-  command: yarn npm audit
+- name: run npm audit
+  command: npm audit
   args:
     chdir: "{{ playbook_dir }}/../frontend_app/"
   ignore_errors: true
