--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -70,6 +70,9 @@ Vagrant.configure("2") do |config|
     backend.vm.provider :virtualbox do |virtualbox, override|
       virtualbox.memory = 1024
       virtualbox.cpus = 1
+      # Configure a bindfs mount for the virtualenv 'venv' directory,
+      # preventing venv files from being shared within the VirtualBox shared folder.
+      # This avoids the performance hit of running a venv from the slow shared folder.
       override.trigger.after :"Vagrant::Action::Builtin::WaitForCommunicator", type: :action do |trigger|
         trigger.run_remote = {inline: "mkdir -p /home/vagrant/backend_app_venv"}
       end
@@ -126,6 +129,10 @@ Vagrant.configure("2") do |config|
 
     provisioner.vm.provider :virtualbox do |virtualbox, override|
       virtualbox.memory = 1024
+      # Configure a bindfs mount for the large 'node_modules' directory,
+      # preventing these files from being shared within the VirtualBox shared folder.
+      # This avoids the performance hit of accessing a large number of files via
+      # the slow VirtualBox shared folder
       override.trigger.after :"Vagrant::Action::Builtin::WaitForCommunicator", type: :action do |trigger|
         trigger.run_remote = {inline: "mkdir -p /home/vagrant/frontend_app_node_modules"}
       end
