--- a/{{ cookiecutter.project_slug }}/backend_app/requirements.in
+++ b/{{ cookiecutter.project_slug }}/backend_app/requirements.in
@@ -10,7 +10,9 @@ flake8
 gunicorn
 ipython
 mypy
-psycopg2-binary
+# We install psycopg2 rather than psycopg2-binary to work around a libpq issue
+# when running Docker on M1 Macs, see https://stackoverflow.com/q/62807717
+psycopg2
 pytz
 pywatchman
 safety
