--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -96,9 +96,11 @@ Vagrant.configure("2") do |config|
 
     backend.vm.provider :docker do |docker, override|
       docker.create_args = DEFAULT_DOCKER_CREATE_ARGS + [
-        "-v", "venv:/opt/{{ cookiecutter.project_slug }}_backend/current/venv"
+        "-v", "{{ cookiecutter.project_slug }}_venv:/opt/{{ cookiecutter.project_slug }}_backend/current/venv"
       ]
-      override.vm.provision "shell", inline: "chown vagrant:vagrant /opt/{{ cookiecutter.project_slug }}_backend/current/venv"
+      override.trigger.after :"Vagrant::Action::Builtin::WaitForCommunicator", type: :action do |trigger|
+        trigger.run_remote = {inline: "chown vagrant:vagrant /opt/{{ cookiecutter.project_slug }}_backend/current/venv"}
+      end
     end
 
   end
@@ -163,9 +165,11 @@ Vagrant.configure("2") do |config|
 
     provisioner.vm.provider :docker do |docker, override|
       docker.create_args = DEFAULT_DOCKER_CREATE_ARGS + [
-        "-v", "node_modules:/vagrant/frontend_app/node_modules"
+        "-v", "{{ cookiecutter.project_slug }}_node_modules:/vagrant/frontend_app/node_modules"
       ]
-      override.vm.provision "shell", inline: "chown vagrant:vagrant /vagrant/frontend_app/node_modules"
+      override.trigger.after :"Vagrant::Action::Builtin::WaitForCommunicator", type: :action do |trigger|
+        trigger.run_remote = {inline: "chown vagrant:vagrant /vagrant/frontend_app/node_modules"}
+      end
     end
 
     provisioner.vm.provision "file" do |file|
