Add tzdata to requirements.

--- a/{{ cookiecutter.project_slug }}/backend_app/requirements.txt
+++ b/{{ cookiecutter.project_slug }}/backend_app/requirements.txt
@@ -603,6 +603,10 @@ typing-extensions==4.3.0 \
     #   django-stubs
     #   django-stubs-ext
     #   mypy
+tzdata==2022.1 \
+    --hash=sha256:238e70234214138ed7b4e8a0fab0e5e13872edab3be586ab8198c407620e2ab9 \
+    --hash=sha256:8b536a8ec63dc0751342b3984193a3118f8fca2afe25752bb9b7fffd398552d3
+    # via -r requirements.in
 urllib3[secure,socks]==1.26.10 \
     --hash=sha256:8298d6d56d39be0e3bc13c1c97d133f9b45d797169a0e11cdd0e0489d786f7ec \
     --hash=sha256:879ba4d1e89654d9769ce13121e0f94310ea32e8d2f8cf587b77c08bbcdb30d6
