Source .venvrc from .bashrc. Update vagrant ssh instructions. Remove ssh helper scripts. Remove cygwin dependency on Windows.

--- a/{{ cookiecutter.project_slug }}/Jenkinsfile
+++ b/{{ cookiecutter.project_slug }}/Jenkinsfile
@@ -34,7 +34,7 @@ pipeline {
         stage('Run backend tests') {
             steps {
                 echo 'Running unit tests...'
-                sh './ssh_backend.sh make test'
+                sh 'vagrant ssh backend -c "cd /vagrant/backend_app && make test"'
             }
         }
 
@@ -48,7 +48,7 @@ pipeline {
         stage('Run backend checks') {
             steps {
                 echo 'Checking for known vulnerabilities using "safety"...'
-                sh './ssh_backend.sh make safety_check'
+                sh 'vagrant ssh backend -c "cd /vagrant/backend_app && make safety_check"'
             }
         }
 
