Remove firefox snap package workaround (switched to using a .deb firefox package)

--- a/{{ cookiecutter.project_slug }}/backend_app/Makefile
+++ b/{{ cookiecutter.project_slug }}/backend_app/Makefile
@@ -3,11 +3,7 @@
 
 test:
 	. ~/.venvrc
-	# Ubuntu 22.04 has firefox as a snap package, we need to run with a tmpdir
-	# that both geckodriver and firefox have access to, see
-	# https://github.com/mozilla/geckodriver/releases/tag/v0.31.0
-	mkdir -p ~/tmp
-	TMPDIR=${HOME}/tmp coverage run manage.py test
+	coverage run manage.py test
 	TEST_EXIT_CODE=$$?;
 	coverage html
 	echo Coverage html report written to coverage_html_report/index.html
