--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -42,7 +42,7 @@ Vagrant.configure("2") do |config|
 
   # If we're using Docker as the provider, apply the following config for all containers
   config.vm.provider :docker do |docker, override|
-    docker.build_dir = "."
+    docker.image = "{{ cookiecutter.project_slug}}_base_image"
     docker.remains_running = true
     docker.has_ssh = true
     # Set volume path using create_args instead of docker.volumes,
