Update to react 18. Update frontend dependencies, remove react-router from frontend template.

--- a/{{ cookiecutter.project_slug }}/.gitignore
+++ b/{{ cookiecutter.project_slug }}/.gitignore
@@ -15,4 +15,5 @@ __pycache__/
 /backend_app/geckodriver.log
 /frontend_app/node_modules/
 /frontend_app/build/
+/frontend_app/npm-debug.log*
 /other_tools/testssl.sh/
