--- a/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
@@ -6,6 +6,9 @@
   tasks:
     - name: check connectivity to all hosts
       ping:
+    - name: ensure apt cache is up to date
+      apt:
+        update_cache: yes
 
 - hosts: localhost
   roles:
