--- a/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/tasks/copy.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/tasks/copy.yml
@@ -13,7 +13,7 @@
     owner: root
     group: root
     mode: "u=rw,o=,o="
-  notify: "updated ssl"
+  notify: "restart nginx"
 
 - name: copy certificate
   copy:
@@ -22,5 +22,5 @@
     owner: root
     group: root
     mode: "u=rw,o=r,o=r"
-  notify: "updated ssl"
+  notify: "restart nginx"
 {% endraw %}
