--- a/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/vars/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/vars/main.yml
@@ -3,4 +3,4 @@
 ssl_private_key_dest: "/etc/ssl/private/{{ ssl_private_key_name }}"
 ssl_certificate_dest: "/etc/ssl/certs/{{ ssl_certificate_name }}"
 ssl_csr_path: "/etc/ssl/csr/{{ (ssl_certificate_name | splitext)[0] }}.csr"
-{% endraw %}
+{% endraw -%}
