--- a/{{ cookiecutter.project_slug }}/provisioning/roles/ufw_firewall/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/ufw_firewall/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 {% raw %}
-- name: ensure UFW is installed
-  apt:
+- name: Ensure UFW is installed
+  ansible.builtin.apt:
     name: ufw
     state: present
 
-- name: apply UFW firewall rules
-  ufw:
+- name: Apply UFW firewall rules
+  community.general.ufw:
     port: "{{ item.0.port }}"
     proto: "{{ item.0.proto }}"
     rule: "{{ item.0.rule }}"
@@ -14,8 +14,8 @@
   when: item.0.when | bool
   loop: "{{ ufw_firewall_rules | subelements('from_ip') }}"
 
-- name: set UFW state to "{{ ufw_firewall_state }}"
-  ufw:
+- name: Set UFW state to "{{ ufw_firewall_state }}"
+  community.general.ufw:
     state: "{{ ufw_firewall_state }}"
     default: deny
-{% endraw %}
+{% endraw -%}
