--- a/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
@@ -1,12 +1,12 @@
 ---
 {% raw %}
-- name: install npm packages
-  command: npm clean-install
-  args:
-    chdir: "{{ playbook_dir }}/../frontend_app/"
+- name: Install npm packages
+  community.general.npm:
+    path: "{{ playbook_dir }}/../frontend_app/"
+    ci: true
 
-- name: build the frontend app bundle
-  command: npm run build
+- name: Build the frontend app bundle
+  ansible.builtin.command: npm run build
   args:
     chdir: "{{ playbook_dir }}/../frontend_app/"
   environment:
@@ -15,10 +15,10 @@
 # Note that this doesn't fail the playbook if vulnerable packages are found.
 # This only displays the report in the ansible output so we don't cause any
 # deployment to fail unexpectedly.
-- name: run npm audit
-  command: npm audit
+- name: Run npm audit
+  ansible.builtin.command: npm audit
   args:
     chdir: "{{ playbook_dir }}/../frontend_app/"
   ignore_errors: true
   changed_when: false
-{% endraw %}
+{% endraw -%}
